# usth.M3.22.AdvancedHPC

./: .gitignore  README.md
LW1/ex1/: CMakeLists.txt  Exercise.hpp  Question1.cu  Question2.cu  Question3.cu  build.bat  build.sh  main.cu
LW1/ex2/: CMakeLists.txt  Question1.cu  Question2.cu  Question3.cu  build.bat  build.sh
LW1/include/: chronoGPU.cu  common.hpp
LW2/: CMakeLists.txt  D_Matrix.cu  H_Matrix.cu  H_Matrix.cuh  Student1.cu  Student2.cu  Student3.cu  Student4.cu  Student5.cu  build.sh  main.cu
LW2/utils/: chronoGPU.hpp  common.hpp  helper_cuda_drvapi.h
LW3/: CMakeLists.txt  build.bat  build.sh
LW3/src/exercise2/: main.cu
LW3/student/exo1/: student.cu
LW3/student/exo2/: student.cu
LW4/: CMakeLists.txt  build.sh
LW4/src/exercise1/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
LW4/src/exercise2/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
LW4/src/exercise3/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
LW4/src/exercise4/: ExerciseImpl.cu  ExerciseImpl.h  main.cu
LW4/src/reference/: ImageEqualizer.cpp  ImageEqualizer.h
LW4/student/exo1/: student.cu  student.h
LW4/student/exo2/: student.cu  student.h
LW4/student/exo3/: student.cu  student.h
LW4/student/exo4/: student.cu  student.h
LW4/utils/: ppm.h
LW4/utils/OPP/: OPP_cuda_histogram.cuh  OPP_cuda_reduce.cuh
Project/: CMakeLists.txt  build.bat  build.sh
Project/src/exercise1/: Exercise1.cu  Exercise1.h  main.cu
Project/src/exercise2/: Exercise2.cu  Exercise2.h  main.cu
Project/src/exercise3/: Exercise3.cu  Exercise3.h  main.cu
Project/student/exo1/: student.cu  student.h
Project/student/exo2/: student.cu  student.h
Project/student/exo3/: SparseMatrix.h  student.h  student1.cu  student2.cu  student3.cu
Project/utils/: Exercise.h
Project/utils/OPP/: OPP_cuda_buffer.cuh  OPP_cuda_histogram.cuh  OPP_cuda_reduce.cuh
